[gd_scene load_steps=2 format=3 uid="uid://bdq6taskmt5de"]

[ext_resource type="Script" uid="uid://dh3m1f6fe5ks3" path="res://ui/scores/sum_line.gd" id="1_4xoke"]

[node name="SumLine" type="Panel"]
anchors_preset = -1
anchor_right = 0.523
anchor_bottom = 0.034
offset_right = 0.559998
offset_bottom = -0.200001
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4xoke")

[node name="ScoreLine" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.963
offset_left = 15.0
offset_right = -13.0
offset_bottom = 0.998999

[node name="Label" type="Label" parent="ScoreLine"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "TOTAL"
vertical_alignment = 1

[node name="ValueA" type="Label" parent="ScoreLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
text = "123"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="ValueB" type="Label" parent="ScoreLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
text = "123"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="ValueC" type="Label" parent="ScoreLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
text = "123"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[connection signal="mouse_entered" from="ScoreLine" to="ScoreLine" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ScoreLine" to="ScoreLine" method="_on_mouse_exited"]
